--- a/package.json
+++ b/package.json
@@ -8,11 +8,35 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.13.4",
+    "@react-native-community/datetimepicker": "3.0.4",
+    "@react-native-community/masked-view": "0.1.10",
+    "@react-native-picker/picker": "1.9.2",
+    "@react-navigation/bottom-tabs": "^5.11.7",
+    "@react-navigation/drawer": "^5.12.3",
+    "@react-navigation/native": "^5.9.2",
+    "@react-navigation/stack": "^5.14.2",
     "expo": "~40.0.0",
+    "expo-app-loading": "^1.0.1",
+    "expo-camera": "~9.1.0",
+    "expo-document-picker": "~8.4.1",
+    "expo-font": "~8.4.0",
+    "expo-image-picker": "~9.2.0",
+    "expo-location": "~10.0.0",
+    "expo-notifications": "~0.8.2",
+    "expo-permissions": "~10.0.0",
+    "expo-screen-capture": "^3.0.0",
+    "expo-sharing": "~8.5.0",
+    "expo-splash-screen": "~0.8.1",
     "expo-status-bar": "~1.0.3",
+    "lottie-react-native": "~2.6.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-gesture-handler": "~1.8.0",
+    "react-native-reanimated": "2.0.0-rc.0",
+    "react-native-safe-area-context": "3.1.9",
+    "react-native-screens": "~2.15.2",
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
