--- a/package.json
+++ b/package.json
@@ -40,11 +40,13 @@
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-gesture-handler": "~1.8.0",
+    "react-native-paper": "^4.7.1",
     "react-native-reanimated": "2.0.0-rc.0",
     "react-native-redash": "^16.0.8",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.2",
     "react-native-svg": "12.1.0",
+    "react-native-vector-icons": "^8.0.0",
     "react-native-web": "~0.13.12",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
@@ -55,6 +57,7 @@
     "@babel/core": "~7.9.0",
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
+    "@types/react-redux": "^7.1.16",
     "typescript": "~4.0.0"
   },
   "private": true
