--- a/package.json
+++ b/package.json
@@ -39,9 +39,9 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
-    "react-native-gesture-handler": "~1.8.0",
+    "react-native-gesture-handler": "1.10.2",
     "react-native-paper": "^4.7.1",
-    "react-native-reanimated": "2.0.0-rc.0",
+    "react-native-reanimated": "2.0.0-rc.1",
     "react-native-redash": "^16.0.8",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.2",
