--- a/package.json
+++ b/package.json
@@ -36,12 +36,15 @@
     "expo-status-bar": "~1.0.3",
     "formik": "^2.2.6",
     "lottie-react-native": "~2.6.1",
+    "patch-package": "^6.2.2",
+    "postinstall-postinstall": "^2.1.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-circular-progress": "^1.3.7",
     "react-native-gesture-handler": "1.10.2",
     "react-native-paper": "^4.7.1",
-    "react-native-reanimated": "2.0.0-rc.1",
+    "react-native-reanimated": "2.0.0-rc.3",
     "react-native-redash": "^16.0.8",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.2",
