--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-native-redash": "^16.0.8",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.2",
+    "react-native-status-bar-height": "^2.6.0",
     "react-native-svg": "12.1.0",
     "react-native-vector-icons": "^8.0.0",
     "react-native-web": "~0.13.12",
