--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-circular-progress": "^1.3.7",
     "react-native-gesture-handler": "1.10.2",
+    "react-native-keyboard-aware-scroll-view": "^0.9.3",
     "react-native-paper": "^4.7.1",
     "react-native-reanimated": "2.0.0-rc.3",
     "react-native-redash": "^16.0.8",
