--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/stack": "^5.14.2",
     "@ui-kitten/components": "^5.0.0",
     "@ui-kitten/eva-icons": "^5.0.0",
+    "axios": "^0.21.1",
     "d3-shape": "^2.0.0",
     "expo": "~40.0.0",
     "expo-app-loading": "^1.0.1",
