--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "react-native start",
+    "android": "react-native run-android",
+    "ios": "react-native run-ios",
     "web": "expo start --web",
     "eject": "expo eject",
     "postinstall": "patch-package"
@@ -37,14 +36,16 @@
     "expo-sharing": "~8.5.0",
     "expo-splash-screen": "~0.8.1",
     "expo-status-bar": "~1.0.3",
+    "expo-updates": "~0.4.0",
     "formik": "^2.2.6",
+    "hermes-engine": "0.5.2-rc1",
     "lottie-react-native": "~2.6.1",
     "netlify-cli": "^3.8.5",
     "patch-package": "^6.2.2",
     "postinstall-postinstall": "^2.1.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native": "~0.63.4",
     "react-native-circular-progress": "^1.3.7",
     "react-native-gesture-handler": "1.10.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.3",
@@ -55,6 +56,7 @@
     "react-native-screens": "~2.15.2",
     "react-native-status-bar-height": "^2.6.0",
     "react-native-svg": "12.1.0",
+    "react-native-unimodules": "~0.12.0",
     "react-native-vector-icons": "^8.0.0",
     "react-native-web": "~0.13.12",
     "react-redux": "^7.2.2",
@@ -67,7 +69,12 @@
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
     "@types/react-redux": "^7.1.16",
+    "babel-jest": "~25.2.6",
+    "jest": "~25.2.6",
+    "react-test-renderer": "~16.13.1",
     "typescript": "~4.0.0"
   },
-  "private": true
+  "private": true,
+  "name": "SingHealth-App",
+  "version": "1.0.0"
 }
