Fixed success animation on android

--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "expo-splash-screen": "~0.8.1",
     "expo-status-bar": "~1.0.3",
     "formik": "^2.2.6",
-    "lottie-react-native": "~2.6.1",
+    "lottie-react-native": "^3.5.0",
+    "mime": "^2.5.2",
     "netlify-cli": "^3.8.5",
     "patch-package": "^6.2.2",
     "postinstall-postinstall": "^2.1.0",
