--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react-native-svg": "12.1.0",
     "react-native-vector-icons": "^8.0.0",
     "react-native-web": "~0.13.12",
+    "react-native-web-lottie": "^1.4.4",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
