--- a/package.json
+++ b/package.json
@@ -47,17 +47,17 @@
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-circular-progress": "^1.3.7",
-    "react-native-gesture-handler": "1.10.2",
+    "react-native-gesture-handler": "^1.10.3",
     "react-native-keyboard-aware-scroll-view": "^0.9.3",
     "react-native-paper": "^4.7.1",
-    "react-native-reanimated": "2.0.0-rc.3",
+    "react-native-reanimated": "^2.0.0",
     "react-native-redash": "^16.0.8",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.2",
     "react-native-status-bar-height": "^2.6.0",
     "react-native-svg": "12.1.0",
     "react-native-vector-icons": "^8.0.0",
-    "react-native-web": "~0.13.12",
+    "react-native-web": "^0.15.0",
     "react-native-web-lottie": "^1.4.4",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
