--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject",
-    "postinstall": "patch-package"
+    "postinstall": "patch-package",
+    "build": "expo build:web"
   },
   "dependencies": {
     "@eva-design/eva": "^2.0.0",
-    "@expo/webpack-config": "^0.12.58",
+    "@expo/webpack-config": "^0.12.61",
     "@react-native-async-storage/async-storage": "^1.13.4",
     "@react-native-community/datetimepicker": "3.0.4",
     "@react-native-community/masked-view": "0.1.10",
@@ -22,6 +23,7 @@
     "@ui-kitten/components": "^5.0.0",
     "@ui-kitten/eva-icons": "^5.0.0",
     "axios": "^0.21.1",
+    "babel-preset-expo": "^8.3.0",
     "d3-shape": "^2.0.0",
     "expo": "~40.0.0",
     "expo-app-loading": "^1.0.1",
@@ -69,6 +71,7 @@
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
     "@types/react-redux": "^7.1.16",
+    "expo-cli": "^4.3.0",
     "typescript": "~4.0.0"
   },
   "private": true
