--- a/package.json
+++ b/package.json
@@ -6,24 +6,25 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject",
-    "postinstall": "patch-package"
+    "postinstall": "patch-package",
+    "build": "expo build:web"
   },
   "dependencies": {
     "@eva-design/eva": "^2.0.0",
-    "@expo/webpack-config": "^0.12.58",
-    "@react-native-async-storage/async-storage": "^1.13.4",
+    "@expo/webpack-config": "^0.12.61",
+    "@react-native-async-storage/async-storage": "^1.14.1",
     "@react-native-community/datetimepicker": "3.0.4",
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-picker/picker": "1.9.2",
-    "@react-navigation/bottom-tabs": "^5.11.7",
-    "@react-navigation/drawer": "^5.12.3",
-    "@react-navigation/native": "^5.9.2",
-    "@react-navigation/stack": "^5.14.2",
+    "@react-navigation/bottom-tabs": "^5.11.8",
+    "@react-navigation/drawer": "^5.12.4",
+    "@react-navigation/native": "^5.9.3",
+    "@react-navigation/stack": "^5.14.3",
     "@ui-kitten/components": "^5.0.0",
     "@ui-kitten/eva-icons": "^5.0.0",
     "axios": "^0.21.1",
-    "d3-shape": "^2.0.0",
-    "expo": "~40.0.0",
+    "d3-shape": "^2.1.0",
+    "expo": "^40.0.1",
     "expo-app-loading": "^1.0.1",
     "expo-camera": "~9.1.0",
     "expo-document-picker": "~8.4.1",
@@ -40,7 +41,6 @@
     "formik": "^2.2.6",
     "lottie-react-native": "^3.5.0",
     "mime": "^2.5.2",
-    "netlify-cli": "^3.8.5",
     "patch-package": "^6.2.2",
     "postinstall-postinstall": "^2.1.0",
     "react": "16.13.1",
@@ -49,14 +49,14 @@
     "react-native-circular-progress": "^1.3.7",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-keyboard-aware-scroll-view": "^0.9.3",
-    "react-native-paper": "^4.7.1",
+    "react-native-paper": "^4.7.2",
     "react-native-reanimated": "^2.0.0",
     "react-native-redash": "^16.0.8",
     "react-native-safe-area-context": "3.1.9",
-    "react-native-screens": "~2.15.2",
+    "react-native-screens": "^2.18.1",
     "react-native-status-bar-height": "^2.6.0",
     "react-native-svg": "12.1.0",
-    "react-native-vector-icons": "^8.0.0",
+    "react-native-vector-icons": "^8.1.0",
     "react-native-web": "^0.15.0",
     "react-native-web-lottie": "^1.4.4",
     "react-redux": "^7.2.2",
