--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "web": "expo start --web",
     "eject": "expo eject",
     "postinstall": "patch-package",
-    "build": "expo build:web"
+    "build": "expo build:web",
+    "test": "jest"
+  },
+  "jest": {
+    "preset": "react-native"
   },
   "dependencies": {
     "@eva-design/eva": "^2.0.0",
@@ -62,13 +66,19 @@
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "ts-jest": "^26.5.3",
     "yup": "^0.32.9"
   },
   "devDependencies": {
-    "@babel/core": "~7.9.0",
+    "@babel/core": "^7.13.10",
+    "@types/jest": "^26.0.20",
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
     "@types/react-redux": "^7.1.16",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^26.6.3",
+    "jest": "^26.6.3",
+    "regenerator-runtime": "^0.13.7",
     "typescript": "~4.0.0"
   },
   "private": true
