--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "preset": "react-native"
   },
   "dependencies": {
+    "@babel/preset-env": "^7.13.10",
     "@eva-design/eva": "^2.0.0",
     "@expo/webpack-config": "^0.12.61",
     "@react-native-async-storage/async-storage": "^1.14.1",
@@ -27,6 +28,7 @@
     "@ui-kitten/components": "^5.0.0",
     "@ui-kitten/eva-icons": "^5.0.0",
     "axios": "^0.21.1",
+    "babel-preset-react-native": "^4.0.1",
     "d3-shape": "^2.1.0",
     "expo": "^40.0.1",
     "expo-app-loading": "^1.0.1",
@@ -75,7 +77,6 @@
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
     "@types/react-redux": "^7.1.16",
-    "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^26.6.3",
     "jest": "^26.6.3",
     "regenerator-runtime": "^0.13.7",
