--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "web": "expo start --web",
     "eject": "expo eject",
     "postinstall": "patch-package",
-    "build": "expo build:web"
+    "build": "expo build:web",
+    "lint": "eslint *.js **/*.js src/**/*.js",
+    "format": "prettier --check ./src"
   },
   "dependencies": {
+    "@babel/eslint-parser": "^7.13.10",
     "@eva-design/eva": "^2.0.0",
     "@expo/webpack-config": "^0.12.61",
     "@react-native-async-storage/async-storage": "^1.14.1",
@@ -19,11 +22,23 @@
     "@react-navigation/bottom-tabs": "^5.11.8",
     "@react-navigation/drawer": "^5.12.4",
     "@react-navigation/native": "^5.9.3",
+    "@react-navigation/routers": "^5.7.2",
     "@react-navigation/stack": "^5.14.3",
+    "@typescript-eslint/eslint-plugin": "^4.18.0",
+    "@typescript-eslint/parser": "^4.18.0",
     "@ui-kitten/components": "^5.0.0",
     "@ui-kitten/eva-icons": "^5.0.0",
     "axios": "^0.21.1",
     "d3-shape": "^2.1.0",
+    "eslint": "^7.22.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-react-native": "^3.10.0",
     "expo": "^40.0.1",
     "expo-app-loading": "^1.0.1",
     "expo-camera": "~9.1.0",
@@ -43,6 +58,8 @@
     "mime": "^2.5.2",
     "patch-package": "^6.2.2",
     "postinstall-postinstall": "^2.1.0",
+    "prettier": "^2.2.1",
+    "prettier-eslint": "^12.0.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
@@ -65,7 +82,7 @@
     "yup": "^0.32.9"
   },
   "devDependencies": {
-    "@babel/core": "~7.9.0",
+    "@babel/core": "^7.13.10",
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
     "@types/react-redux": "^7.1.16",
