--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "expo-splash-screen": "~0.8.1",
     "expo-status-bar": "~1.0.3",
     "formik": "^2.2.6",
+    "lodash": "^4.17.21",
     "lottie-react-native": "^3.5.0",
     "mime": "^2.5.2",
     "patch-package": "^6.2.2",
