Update dependencies and ESLint config

--- a/package.json
+++ b/package.json
@@ -8,11 +8,10 @@
     "eject": "expo eject",
     "postinstall": "patch-package",
     "build": "expo build:web",
-    "lint": "eslint *.js **/*.js src/**/*.js",
+    "lint": "eslint --ext .jsx,.js,.ts,.tsx ./src --quiet",
     "format": "prettier --check ./src"
   },
   "dependencies": {
-    "@babel/eslint-parser": "^7.13.10",
     "@eva-design/eva": "^2.0.0",
     "@expo/webpack-config": "^0.12.61",
     "@react-native-async-storage/async-storage": "^1.14.1",
@@ -24,21 +23,10 @@
     "@react-navigation/native": "^5.9.3",
     "@react-navigation/routers": "^5.7.2",
     "@react-navigation/stack": "^5.14.3",
-    "@typescript-eslint/eslint-plugin": "^4.18.0",
-    "@typescript-eslint/parser": "^4.18.0",
     "@ui-kitten/components": "^5.0.0",
     "@ui-kitten/eva-icons": "^5.0.0",
     "axios": "^0.21.1",
     "d3-shape": "^2.1.0",
-    "eslint": "^7.22.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-react": "^7.22.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "eslint-plugin-react-native": "^3.10.0",
     "expo": "^40.0.1",
     "expo-app-loading": "^1.0.1",
     "expo-camera": "~9.1.0",
@@ -57,10 +45,6 @@
     "lodash": "^4.17.21",
     "lottie-react-native": "^3.5.0",
     "mime": "^2.5.2",
-    "patch-package": "^6.2.2",
-    "postinstall-postinstall": "^2.1.0",
-    "prettier": "^2.2.1",
-    "prettier-eslint": "^12.0.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
@@ -84,10 +68,26 @@
   },
   "devDependencies": {
     "@babel/core": "^7.13.10",
-    "@types/react": "~16.9.35",
-    "@types/react-native": "~0.63.2",
+    "@babel/eslint-parser": "^7.13.10",
+    "@types/react": "^17.0.3",
+    "@types/react-native": "^0.63.52",
     "@types/react-redux": "^7.1.16",
-    "typescript": "~4.0.0"
+    "@typescript-eslint/eslint-plugin": "^4.18.0",
+    "@typescript-eslint/parser": "^4.18.0",
+    "eslint": "^7.22.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-react-native": "^3.10.0",
+    "patch-package": "^6.4.7",
+    "postinstall-postinstall": "^2.1.0",
+    "prettier": "^2.2.1",
+    "prettier-eslint": "^12.0.0",
+    "typescript": "^4.2.3"
   },
   "private": true
 }
