--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@react-navigation/stack": "^5.14.3",
     "@ui-kitten/components": "^5.0.0",
     "@ui-kitten/eva-icons": "^5.0.0",
+    "@ui-kitten/moment": "^5.0.0",
     "axios": "^0.21.1",
     "d3-shape": "^2.1.0",
     "expo": "^40.0.1",
@@ -45,6 +46,7 @@
     "lodash": "^4.17.21",
     "lottie-react-native": "^3.5.0",
     "mime": "^2.5.2",
+    "moment": "^2.29.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
