--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ui-kitten/components": "^5.0.0",
     "@ui-kitten/eva-icons": "^5.0.0",
     "@ui-kitten/moment": "^5.0.0",
+    "abs-svg-path": "^0.1.1",
     "axios": "^0.21.1",
     "d3-shape": "^2.1.0",
     "expo": "^40.0.1",
@@ -39,14 +40,16 @@
     "expo-notifications": "~0.8.2",
     "expo-permissions": "~11.0.0",
     "expo-screen-capture": "^3.0.0",
-    "expo-splash-screen": "~0.9.0",
     "expo-sharing": "~9.0.0",
+    "expo-splash-screen": "~0.9.0",
     "expo-status-bar": "~1.0.3",
     "formik": "^2.2.6",
     "lodash": "^4.17.21",
     "lottie-react-native": "^3.5.0",
     "mime": "^2.5.2",
     "moment": "^2.29.1",
+    "normalize-svg-path": "^1.1.0",
+    "parse-svg-path": "^0.1.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
