--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "axios": "^0.21.1",
     "babel-preset-react-native": "^4.0.1",
     "d3-shape": "^2.1.0",
+    "enzyme": "^3.11.0",
     "expo": "^40.0.1",
     "expo-app-loading": "^1.0.1",
     "expo-camera": "~9.1.0",
@@ -75,18 +76,14 @@
   },
   "devDependencies": {
     "@babel/core": "^7.13.10",
-    "@types/jest": "^26.0.20",
-
-    "babel-jest": "^26.6.3",
-    "jest": "^26.6.3",
-    "regenerator-runtime": "^0.13.7",
-
     "@babel/eslint-parser": "^7.13.10",
+    "@types/jest": "^26.0.20",
     "@types/react": "^17.0.3",
     "@types/react-native": "^0.63.52",
     "@types/react-redux": "^7.1.16",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
+    "babel-jest": "^26.6.3",
     "eslint": "^7.22.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^8.1.0",
@@ -96,10 +93,12 @@
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-react-native": "^3.10.0",
+    "jest": "^26.6.3",
     "patch-package": "^6.4.7",
     "postinstall-postinstall": "^2.1.0",
     "prettier": "^2.2.1",
     "prettier-eslint": "^12.0.0",
+    "regenerator-runtime": "^0.13.7",
     "typescript": "^4.2.3"
   },
   "private": true
