--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@expo/webpack-config": "^0.12.63",
     "@react-native-async-storage/async-storage": "^1.14.1",
     "@react-native-community/datetimepicker": "3.4.2",
-    "@react-native-community/masked-view": "0.1.10",
+    "@react-native-community/masked-view": "^0.1.10",
     "@react-native-picker/picker": "1.12.0",
     "@react-navigation/bottom-tabs": "^5.11.8",
     "@react-navigation/drawer": "^5.12.4",
@@ -61,6 +61,7 @@
     "react-native-redash": "^16.0.8",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "^2.18.1",
+    "react-native-skeleton-placeholder": "^3.0.4",
     "react-native-status-bar-height": "^2.6.0",
     "react-native-svg": "12.1.0",
     "react-native-vector-icons": "^8.1.0",
