--- a/package.json
+++ b/package.json
@@ -13,7 +13,14 @@
     "test": "jest"
   },
   "jest": {
-    "preset": "react-native"
+    "preset": "jest-expo",
+    "moduleNameMapper": {
+      "\\.(css|scss)$": "<rootDir>/__mocks__/styleMock.js"
+    },
+    "transformIgnorePatterns": [
+      "node_modules/(?!(jest-)?react-native|react-clone-referenced-element|@react-native-community|expo(nent)?|@expo(nent)?/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|@sentry/.*)"
+    ],
+    "setupFiles": ["<rootDir>/_tests_/jest-setup.js"]
   },
   "dependencies": {
     "@babel/preset-env": "^7.13.10",
@@ -28,6 +35,8 @@
     "@react-navigation/native": "^5.9.3",
     "@react-navigation/routers": "^5.7.2",
     "@react-navigation/stack": "^5.14.3",
+    "@testing-library/react-native": "^7.2.0",
+    "@types/enzyme": "^3.10.8",
     "@ui-kitten/components": "^5.0.0",
     "@ui-kitten/eva-icons": "^5.0.0",
     "axios": "^0.21.1",
@@ -77,7 +86,7 @@
   "devDependencies": {
     "@babel/core": "^7.13.10",
     "@babel/eslint-parser": "^7.13.10",
-    "@types/jest": "^26.0.20",
+    "@types/jest": "^26.0.21",
     "@types/react": "^17.0.3",
     "@types/react-native": "^0.63.52",
     "@types/react-redux": "^7.1.16",
