--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -38,5 +38,9 @@ s3transfer==0.3.6
 six==1.15.0
 urllib3==1.26.4
 werkzeug==1.0.1
+
+#newly added 
 exponent-server-sdk==2.0.0
 rollbar==0.15.2
+pandas==1.2.3
+XlsxWriter==1.3.8
