--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -42,5 +42,7 @@ werkzeug==1.0.1
 #newly added 
 exponent-server-sdk==2.0.0
 rollbar==0.15.2
-pandas==1.2.3
+
 XlsxWriter==1.3.8
+tempfile==2020.7.2
+Flask-Mail==0.9.1
