Added /institutions frontend and installed flask dependencies

--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -33,6 +33,10 @@ pylint = "*"
 python-bsonjs = "*"
 gevent = "*"
 exponent-server-sdk = "*"
+rollbar = "*"
+pandas = "*"
+xlsxwriter = "*"
+flask-mail = "*"
 
 [dev-packages]
 
