--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/bottom-tabs": "^5.11.9",
     "@react-navigation/drawer": "^5.12.5",
+    "@react-navigation/material-top-tabs": "^5.3.15",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/routers": "^5.7.2",
     "@react-navigation/stack": "^5.14.4",
@@ -65,6 +66,7 @@
     "react-native-skeleton-placeholder": "^3.0.4",
     "react-native-status-bar-height": "^2.6.0",
     "react-native-svg": "12.1.0",
+    "react-native-tab-view": "^2.16.0",
     "react-native-toast-message": "^1.4.9",
     "react-native-vector-icons": "^8.1.0",
     "react-native-web": "^0.15.5",
