--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "normalize-svg-path": "^1.1.0",
     "parse-svg-path": "^0.1.2",
     "react": "16.13.1",
+    "react-content-loader": "^6.0.3",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-circular-progress": "^1.3.7",
@@ -63,9 +64,8 @@
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "^3.0.0",
     "react-native-section-list-get-item-layout": "^2.2.3",
-    "react-native-skeleton-placeholder": "^3.0.4",
     "react-native-status-bar-height": "^2.6.0",
-    "react-native-svg": "12.1.0",
+    "react-native-svg": "^12.1.0",
     "react-native-tab-view": "^2.16.0",
     "react-native-toast-message": "^1.4.9",
     "react-native-vector-icons": "^8.1.0",
