--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "react-native-web-lottie": "^1.4.4",
     "react-redux": "^7.2.3",
     "redux": "^4.0.5",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
     "yup": "^0.32.9"
   },
@@ -82,8 +83,8 @@
     "@types/react": "^17.0.3",
     "@types/react-native": "^0.64.2",
     "@types/react-redux": "^7.1.16",
-    "@typescript-eslint/parser": "^4.21.0",
     "@typescript-eslint/eslint-plugin": "^4.21.0",
+    "@typescript-eslint/parser": "^4.21.0",
     "eslint": "^7.23.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^8.1.0",
