--- a/app.json
+++ b/app.json
@@ -25,7 +25,13 @@
       "useNextNotificationsApi": true
     },
     "web": {
-      "favicon": "./assets/favicon.png"
+      "favicon": "./assets/favicon.png",
+      "barStyle": "black-translucent",
+      "splash": {
+        "image": "./assets/singhealth.png",
+        "resizeMode": "contain",
+        "backgroundColor": "#ffffff"
+      }
     }
   }
 }
