--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react-native-vector-icons": "^8.1.0",
     "react-native-web": "^0.15.6",
     "react-native-web-lottie": "^1.4.4",
+    "react-native-web-refresh-control": "^1.0.3",
     "react-redux": "^7.2.3",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
