--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "eject": "expo eject",
     "postinstall": "patch-package",
     "build": "expo build:web",
-    "lint": "eslint --ext .jsx,.js,.ts,.tsx ./src --quiet",
+    "lint": "eslint --ext .jsx,.js,.ts,.tsx ./src",
     "format": "prettier --check ./src"
   },
   "dependencies": {
@@ -64,6 +64,7 @@
     "react-native-web-lottie": "^1.4.4",
     "react-native-web-refresh-control": "^1.0.3",
     "react-redux": "^7.2.3",
+    "react-use": "^17.2.3",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
@@ -75,8 +76,8 @@
     "@types/react": "^17.0.3",
     "@types/react-native": "^0.64.2",
     "@types/react-redux": "^7.1.16",
-    "@typescript-eslint/parser": "^4.22.0",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/parser": "^4.22.0",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "eslint": "^7.24.0",
     "eslint-config-airbnb": "^18.2.1",
