--- a/package.json
+++ b/package.json
@@ -29,13 +29,13 @@
     "axios": "^0.21.1",
     "d3-shape": "^2.1.0",
     "expo": "^41.0.0",
-    "expo-app-loading": "^1.0.1",
-    "expo-camera": "~10.0.0",
+    "expo-app-loading": "^1.0.3",
+    "expo-camera": "~11.0.2",
     "expo-constants": "~10.1.3",
-    "expo-file-system": "~10.0.0",
+    "expo-file-system": "~11.0.2",
     "expo-font": "~8.4.0",
     "expo-image-picker": "~10.1.3",
-    "expo-notifications": "~0.9.0",
+    "expo-notifications": "~0.11.5",
     "formik": "^2.2.6",
     "lodash": "^4.17.21",
     "lottie-react-native": "^3.5.0",
@@ -56,8 +56,8 @@
     "react-native-screens": "^3.1.1",
     "react-native-section-list-get-item-layout": "^2.2.3",
     "react-native-status-bar-height": "^2.6.0",
-    "react-native-svg": "^12.1.0",
-    "react-native-tab-view": "^2.16.0",
+    "react-native-svg": "^12.1.1-0",
+    "react-native-tab-view": "^3.0.1",
     "react-native-toast-message": "^1.4.9",
     "react-native-vector-icons": "^8.1.0",
     "react-native-web": "^0.15.7",
