--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "expo-camera": "~11.0.2",
     "expo-constants": "~10.1.3",
     "expo-file-system": "~11.0.2",
-    "expo-font": "~8.4.0",
+    "expo-font": "~9.1.0",
     "expo-image-picker": "~10.1.3",
     "expo-notifications": "~0.11.5",
     "formik": "^2.2.6",
@@ -49,10 +49,11 @@
     "react-native-circular-progress": "^1.3.7",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-keyboard-aware-scroll-view": "^0.9.3",
+    "react-native-pager-view": "^5.1.3",
     "react-native-paper": "^4.7.2",
     "react-native-reanimated": "^2.1.0",
     "react-native-redash": "^16.0.11",
-    "react-native-safe-area-context": "3.1.9",
+    "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "^3.1.1",
     "react-native-section-list-get-item-layout": "^2.2.3",
     "react-native-status-bar-height": "^2.6.0",
