--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/routers": "^5.7.2",
     "@react-navigation/stack": "^5.14.5",
+    "@types/react-native-dotenv": "^0.2.0",
     "@ui-kitten/components": "^5.0.0",
     "@ui-kitten/eva-icons": "^5.0.0",
     "@ui-kitten/moment": "^5.0.0",
@@ -47,6 +48,7 @@
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-circular-progress": "^1.3.7",
+    "react-native-dotenv": "^2.5.5",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-keyboard-aware-scroll-view": "^0.9.4",
     "react-native-pager-view": "^5.1.9",
@@ -63,20 +65,20 @@
     "react-native-web": "^0.16.3",
     "react-native-web-lottie": "^1.4.4",
     "react-native-web-refresh-control": "^1.0.3",
-    "react-use": "^17.2.4",
     "react-redux": "^7.2.4",
+    "react-use": "^17.2.4",
     "redux": "^4.1.0",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
     "yup": "^0.32.9"
   },
   "devDependencies": {
+    "@babel/core": "^7.14.3",
     "@babel/eslint-parser": "^7.14.3",
     "@types/react": "^17.0.6",
-    "@babel/core": "^7.14.3",
-    "@typescript-eslint/eslint-plugin": "^4.24.0",
     "@types/react-native": "^0.64.5",
     "@types/react-redux": "^7.1.16",
+    "@typescript-eslint/eslint-plugin": "^4.24.0",
     "@typescript-eslint/parser": "^4.24.0",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "eslint": "^7.26.0",
