--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "expo-file-system": "~11.0.2",
     "expo-font": "~9.1.0",
     "expo-image-picker": "~10.1.4",
+    "expo-linear-gradient": "~9.1.0",
     "expo-notifications": "~0.11.6",
     "formik": "^2.2.9",
     "lodash": "^4.17.21",
@@ -51,9 +52,9 @@
     "react-native-dotenv": "^2.5.5",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-keyboard-aware-scroll-view": "^0.9.4",
-    "react-native-reanimated": "^2.2.0",
     "react-native-pager-view": "^5.2.0",
     "react-native-paper": "^4.9.1",
+    "react-native-reanimated": "^2.2.0",
     "react-native-redash": "^16.0.11",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "^3.3.0",
@@ -74,12 +75,12 @@
   },
   "devDependencies": {
     "@babel/core": "^7.14.5",
-    "@types/react": "^17.0.11",
     "@babel/eslint-parser": "^7.14.5",
+    "@types/react": "^17.0.11",
     "@types/react-native": "^0.64.10",
     "@types/react-redux": "^7.1.16",
-    "@typescript-eslint/parser": "^4.26.1",
     "@typescript-eslint/eslint-plugin": "^4.26.1",
+    "@typescript-eslint/parser": "^4.26.1",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "eslint": "^7.28.0",
     "eslint-config-airbnb": "^18.2.1",
