--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
   },
   "dependencies": {
     "@eva-design/eva": "^2.1.0",
-    "@expo/webpack-config": "^0.12.81",
-    "@react-native-async-storage/async-storage": "^1.15.5",
-    "@react-native-community/masked-view": "^0.1.11",
+    "@expo/webpack-config": "~0.12.63",
+    "@react-native-async-storage/async-storage": "~1.15.0",
+    "@react-native-community/masked-view": "0.1.11",
     "@react-navigation/bottom-tabs": "^5.11.11",
     "@react-navigation/drawer": "^5.12.5",
     "@react-navigation/material-top-tabs": "^5.3.15",
@@ -29,41 +29,41 @@
     "abs-svg-path": "^0.1.1",
     "axios": "^0.21.1",
     "d3-shape": "^3.0.1",
-    "expo": "^41.0.1",
-    "expo-app-loading": "^1.0.3",
-    "expo-camera": "~11.0.3",
-    "expo-constants": "~10.1.3",
-    "expo-file-system": "~11.0.2",
-    "expo-font": "~9.1.0",
-    "expo-image-picker": "~10.1.4",
-    "expo-linear-gradient": "~9.1.0",
-    "expo-notifications": "~0.11.6",
+    "expo": "^42.0.0",
+    "expo-app-loading": "^1.1.2",
+    "expo-camera": "~11.2.1",
+    "expo-constants": "~11.0.1",
+    "expo-file-system": "~11.1.3",
+    "expo-font": "~9.2.1",
+    "expo-image-picker": "~10.2.2",
+    "expo-linear-gradient": "~9.2.0",
+    "expo-notifications": "~0.12.2",
     "formik": "^2.2.9",
     "lodash": "^4.17.21",
-    "lottie-react-native": "^4.0.2",
+    "lottie-react-native": "4.0.2",
     "moment": "^2.29.1",
     "normalize-svg-path": "^1.1.0",
     "parse-svg-path": "^0.1.2",
     "react": "17.0.2",
     "react-content-loader": "^6.0.3",
     "react-dom": "17.0.2",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-circular-progress": "^1.3.7",
-    "react-native-dotenv": "^2.6.2",
-    "react-native-gesture-handler": "^1.10.3",
+    "react-native-dotenv": "^3.0.0",
+    "react-native-gesture-handler": "~1.10.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.4",
-    "react-native-pager-view": "^5.2.1",
+    "react-native-pager-view": "5.2.1",
     "react-native-paper": "^4.9.2",
-    "react-native-reanimated": "^2.2.0",
-    "react-native-redash": "^16.0.11",
+    "react-native-reanimated": "~2.2.0",
+    "react-native-redash": "^16.1.1",
     "react-native-safe-area-context": "3.2.0",
-    "react-native-screens": "^3.4.0",
+    "react-native-screens": "~3.4.0",
     "react-native-section-list-get-item-layout": "^2.2.3",
-    "react-native-svg": "^12.1.1",
+    "react-native-svg": "12.1.1",
     "react-native-tab-view": "^3.0.1",
     "react-native-toast-message": "^1.4.9",
     "react-native-vector-icons": "^8.1.0",
-    "react-native-web": "^0.17.1",
+    "react-native-web": "~0.17.1",
     "react-native-web-lottie": "^1.4.4",
     "react-native-web-refresh-control": "^1.0.3",
     "react-redux": "^7.2.4",
@@ -74,15 +74,15 @@
     "yup": "^0.32.9"
   },
   "devDependencies": {
-    "@babel/core": "^7.14.6",
+    "@babel/core": "~7.14.6",
     "@babel/eslint-parser": "^7.14.7",
-    "@types/react": "^17.0.11",
-    "@types/react-native": "^0.64.10",
+    "@types/react": "~17.0.13",
+    "@types/react-native": "~0.64.10",
     "@types/react-redux": "^7.1.16",
     "@typescript-eslint/eslint-plugin": "^4.28.1",
     "@typescript-eslint/parser": "^4.28.1",
     "babel-plugin-transform-remove-console": "^6.9.4",
-    "eslint": "^7.29.0",
+    "eslint": "^7.30.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.23.4",
@@ -95,7 +95,7 @@
     "postinstall-postinstall": "^2.1.0",
     "prettier": "^2.3.2",
     "prettier-eslint": "^12.0.0",
-    "typescript": "^4.3.4"
+    "typescript": "~4.3.5"
   },
   "private": true
 }
