--- a/app.json
+++ b/app.json
@@ -26,12 +26,7 @@
     },
     "web": {
       "favicon": "./assets/favicon.png",
-      "barStyle": "black-translucent",
-      "splash": {
-        "image": "./assets/singhealth.png",
-        "resizeMode": "contain",
-        "backgroundColor": "#ffffff"
-      }
+      "barStyle": "black-translucent"
     }
   }
 }
